prevent horizontal scrolling
with auto margins, large text blocks sometimes cause horizontal
scrolling.  this fixes it

--- a/docs.css
+++ b/docs.css
@@ -1,3 +1,6 @@
+#content {
+    width: 99%; /* prevents horizontal scrolling */
+}
 .highlight {
     margin: 0.5em 1em; /* indent code blocks slightly */
     padding: 1em;
